Fixed Footer Alignment

--- a/style.css
+++ b/style.css
@@ -2025,6 +2025,7 @@ header,
 
 .footer-links li {
     margin-bottom: 12px;
+    text-indent: 20px;
 }
 
 .footer-links a {
@@ -2127,13 +2128,14 @@ header,
 @media (max-width: 600px) {
     .footer-container {
         grid-template-columns: 1fr;
-        text-align: center;
+        /* text-align: center; */
+        padding: 20px;
     }
 
     .footer-logo,
     .social-links-footer,
     .contact-mini {
-        justify-content: center;
+        justify-content: start;
     }
 
     .footer-desc {
@@ -2143,6 +2145,8 @@ header,
     .footer-bottom {
         flex-direction: column;
         gap: 15px;
+        align-items: flex-start;
+        padding: 20px;
     }
 }
 
